<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BeatFly</string>
    <string name="action_about">About</string>
    <string name="action_request">Request</string>
    <string name="action_review">Review</string>
    <string name="action_settings">Settings</string>

    <string name="activity_title_about">About</string>

    <string name="nav_label_about">About</string>
    <string name="nav_label_oss_licenses">OSS Licenses</string>
    <string name="nav_label_music_licenses">Music Licenses</string>

    <string name="main_tab_header_song">Song</string>
    <string name="main_tab_header_history">History</string>
    <string name="main_tab_header_moderators">Mods</string>

    <string name="about_oss_licenses">Software licenses</string>
    <string name="about_music_licenses">Music licenses</string>

    <string name="content_desc_album_cover">Album cover</string>
    <string name="content_desc_mod_picture">Moderator picture</string>
    <string name="content_desc_mod_rating">Moderator rating</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in">Sign in</string>

    <string name="request_header">Wish a song</string>
    <string name="request_song_hint">Song</string>
    <string name="request_artist_hint">Artist</string>
    <string name="request_submit">Submit</string>

    <string name="review_header">Review playlist</string>
    <string name="review_message_hint">Message</string>
    <string name="review_submit">Submit</string>

    <string name="sample_song_detail_title">Current Song Title</string>
    <string name="sample_song_detail_album">Current Song Album</string>
    <string name="sample_song_detail_artist">Current Song Artist</string>

    <string name="sample_song_title">Song Title %d</string>
    <string name="sample_song_album">Album No %d</string>
    <string name="sample_song_artist">Artist %d</string>
    <string name="sample_song_duration">%1$d:%2$02d</string>

    <string name="sample_mod_name">Moderator Name %d</string>
    <string name="sample_mod_rating">%1$.1f (%2$d)</string>

    <string name="sample_license_name">&lt;a href=\"%1$s\">Title %2$d&lt;/a></string>
    <string name="sample_license_song">Song by &lt;a href=\"%1$s\">Singer %2$d&lt;/a> on &lt;a href=\"%3$s\">%4$s&lt;/a></string>
    <string name="sample_license_cover">Cover by &lt;a href=\"%1$s\">Artist %2$d&lt;/a> on &lt;a href=\"%3$s\">%4$s&lt;/a></string>
</resources>
