<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_etc"
    app:startDestination="@id/aboutFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.github.dnaka91.beatfly.fragment.AboutFragment"
        android:label="@string/nav_label_about"
        tools:layout="@layout/about_fragment">
        <action
            android:id="@+id/action_oss_licenses"
            app:destination="@id/ossLicensesMenuActivity" />
        <action
            android:id="@+id/action_music_licenses"
            app:destination="@id/licenseListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/licenseListFragment"
        android:name="com.github.dnaka91.beatfly.fragment.LicenseListFragment"
        android:label="@string/nav_label_music_licenses"
        tools:layout="@layout/license_list_fragment" />

    <activity
        android:id="@+id/ossLicensesMenuActivity"
        android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
        android:label="@string/nav_label_oss_licenses" />

</navigation>